--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/6c4bd50c50.js"
+      crossorigin="anonymous"
+    ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Lupe Morales</title>
